--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     }
   },
   "dependencies": {
+    "node-sass": "^6.0.1",
+    "sass": "^1.44.0",
     "vscode-css-languageservice": "^5.1.8",
     "vue": "^3.2.16"
   },
